--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -14,6 +14,9 @@
         <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
             <a ng-href="{{item.link}}">{{item.title}}</a>
         </li>
+        <li ng-show="userName" ng-class="{active: isActive('/myBoard')}">
+            <a ng-href="myBoard">My Board</a>
+        </li>
       </ul>
 
        <ul class="nav navbar-nav navbar-right">
