added a front and back end for adding and displaying pins on my board

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,7 +7,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">Ballroom World</a>
+      <!-- <a href="/" class="navbar-brand">Ballroom World</a> -->
+      <a href="/" class="navbar-brand">workspace</a>
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
@@ -35,7 +36,7 @@
         <!-- If user is logged in, display logout button -->
         <li ng-show="userName">
           <a ng-click="go('/auth/twitter/logout')">
-            <img class="navbar-button" src="assets/images/twitter-logout.png" alt="Twitter Logout">
+            <img class="navbar-button" length="20px" width="20px" src="assets/images/twitter-logout.png" alt="Twitter Logout">
           </a>
         </li>
       </ul>     
