modified my board front end

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -36,7 +36,7 @@
         <!-- If user is logged in, display logout button -->
         <li ng-show="userName">
           <a ng-click="go('/auth/twitter/logout')">
-            <img class="navbar-button" length="20px" width="20px" src="assets/images/twitter-logout.png" alt="Twitter Logout">
+            <i class="fa fa-power-off fa-lg"></i>
           </a>
         </li>
       </ul>     
