--- a/client/app/myBoard/myBoard.css
+++ b/client/app/myBoard/myBoard.css
@@ -21,11 +21,27 @@
 	width: auto;
 	overflow:none;
 	border-radius: 5px;
+	max-width: 100%;
+}
+
+#pin-add-button {
+	border: 1px solid black;
+	margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+}
+
+#pin-add {
+	height: 150px;
+	width: 200px;
+	border: 1px solid black;
+	text-align:center;
+	margin-left: 4px;
 }
 
 .pin {
     width: 200px;
-    /*height: 200px;*/
+    min-height: 100px;
     float: left;
     margin: 3px;
     border: 1px solid black;
@@ -34,4 +50,33 @@
 	white-space: -pre-wrap;     /* Opera <7 */   
 	white-space: -o-pre-wrap;   /* Opera 7 */    
 	word-wrap: break-word;      /* IE */
+}
+
+.fa-heart {
+     color: #ae2525;
+     font: 50px;
+     margin-left: 20px;
+}
+
+.fa-trash {
+     color: black;
+     font: 50px;
+     margin-left: 60px;
+}
+
+
+.likes-counter {
+	margin-left: 5px;
+	font-size: 20px;
+}
+
+#like-box {
+	height: 10px;
+	margin-bottom: 15px;
+}
+
+#like-box a {
+	text-decoration: none;
+	cursor: pointer;
+	cursor: hand;
 }
