update my board page - implemented like dislike of pins, delete pin; started implementation of recent polls  route

--- a/client/app/myBoard/myBoard.css
+++ b/client/app/myBoard/myBoard.css
@@ -52,8 +52,14 @@
 	word-wrap: break-word;      /* IE */
 }
 
-.fa-heart {
+.like.fa-heart {
      color: #ae2525;
+     font: 50px;
+     margin-left: 20px;
+}
+
+.dislike.fa-heart {
+     color: blue;
      font: 50px;
      margin-left: 20px;
 }
