added recent pins to main page, front end minor adjustments

--- a/client/components/main/header.html
+++ b/client/components/main/header.html
@@ -2,8 +2,10 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>RFID List</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+    <h1>
+    	<i class="fa fa-thumb-tack  fa-lg"></i>
+    	RFID List
+    </h1>
+    <p class="lead">Join pin sharing fun!</p>
   </div>
 </header>
