changed directive modal to bootstrap modal

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -27,7 +27,8 @@
        <!-- If user is not logged in, display login with twitter button -->
         <li ng-show="!userName" >
           <a ng-click="go('/auth/twitter/')">
-            <img class="navbar-button" src="assets/images/twitter-login.gif" alt="Twitter Login">
+            <!-- <img class="navbar-button" src="assets/images/twitter-login.gif" alt="Twitter Login"> -->
+            <i class="fa fa-sign-in fa-2x"></i>
           </a>
         </li>
 
