--- a/client/components/main/header.html
+++ b/client/components/main/header.html
@@ -4,8 +4,8 @@
   <div class="container">
     <h1>
     	<i class="fa fa-thumb-tack  fa-lg"></i>
-    	RFID List
+    	Ballroom Pinterest
     </h1>
-    <p class="lead">Join pin sharing fun!</p>
+    <p class="lead">Join ballroom pin sharing fun!</p>
   </div>
 </header>
