--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <!-- <a href="/" class="navbar-brand">Ballroom World</a> -->
-      <a href="/" class="navbar-brand">workspace</a>
+      <a href="/" class="navbar-brand">Ballroom World</a>
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
@@ -28,7 +28,7 @@
         <li ng-show="!userName" >
           <a ng-click="go('/auth/twitter/')">
             <!-- <img class="navbar-button" src="assets/images/twitter-login.gif" alt="Twitter Login"> -->
-            <i class="fa fa-sign-in fa-2x"></i>
+            <i class="fa fa-sign-in fa-lg"></i>
           </a>
         </li>
 
